----------------------------------------------------
-Now you can select with the mouse an area from bottom to top, from top
to bottom, from right to left and from left to right. Now it works.

2000-06-28-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new format :scientific format
Becareful, now format doesn't used prefix and postfix.
All format is creating into text : example for money :
12.5 => $ 12.5 but doesn't used prefix and postfix, so now currency symbol
is at the good place.
It's the same think for percent.

For the moment Date format doesn't work (sorry david).

2000-06-14 David Faure <faure@kde.org>
-----------------------------------------------------
Fixed tabbar colors (active table is not 'selected' -> using base())
Speed up KSpreadTextEditor::checkChoose(), might fix i18n problem as well

2000-06-30-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now kspread support Date
Date is saving in "international format", date can read in each language.

2000-07-01-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new format : Fraction format (1/2,1/4,1/8,1/16,1/10,1/100)
-Now you can move into an area when you press enter key, you move
top to bottom and left to right.

2000-07-04-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now kspread can understand Table1!C1 and Table1!c1
it works.
-Improved kspread_dlg_formula

2000-07-05 Wilco Greven <j.w.greven@student.utwente.nl>
-------------------------------------------------------
- For the sake of consistency, better use Shift instead of Control to extend
  a selection.

2000-07-05-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-bug fix
-Improved kspread_dlg_angle
-Now when you press middle button you can paste fix bug #?????