@@ -182,6 +182,8 @@
  <Action name="borderAll"/>
  <Action name="borderRemove"/>
  <Action name="borderColor"/>
+ <Action name="dissociatecell"/>
+ <Action name="mergecell"/>
 </ToolBar>
 <!--
 <InPlaceEditing>
